--- a/Report/report.tex
+++ b/Report/report.tex
@@ -11,8 +11,8 @@
 
 %%%%%%%%%%%%%%%
 % Title Page
-\title{Free \LaTeX\ template for LGU Reports}
-\author{GX \newline 120000000 \newline gx@apartsa.com}
+\title{ERG3020 Project Report}
+\author{Zhuoyu Li \newline 118010159}
 \date{\today}
 %%%%%%%%%%%%%%%
 
