--- a/Report/references.bib
+++ b/Report/references.bib
@@ -1,24 +1,43 @@
-@inproceedings{kour2014real,
-  title={Real-time segmentation of on-line handwritten arabic script},
-  author={Kour, George and Saabne, Raid},
-  booktitle={Frontiers in Handwriting Recognition (ICFHR), 2014 14th International Conference on},
-  pages={417--422},
-  year={2014},
-  organization={IEEE}
+@article{richardson2006markov,
+  title={Markov logic networks},
+  author={Richardson, Matthew and Domingos, Pedro},
+  journal={Machine learning},
+  volume={62},
+  number={1-2},
+  pages={107--136},
+  year={2006},
+  publisher={Springer}
 }
 
-@inproceedings{kour2014fast,
-  title={Fast classification of handwritten on-line Arabic characters},
-  author={Kour, George and Saabne, Raid},
-  booktitle={Soft Computing and Pattern Recognition (SoCPaR), 2014 6th International Conference of},
-  pages={312--318},
-  year={2014},
-  organization={IEEE}
+@inproceedings{Gardner2017AllenNLP,
+  title={AllenNLP: A Deep Semantic Natural Language Processing Platform},
+  author={Matt Gardner and Joel Grus and Mark Neumann and Oyvind Tafjord
+    and Pradeep Dasigi and Nelson F. Liu and Matthew Peters and
+    Michael Schmitz and Luke S. Zettlemoyer},
+  year={2017},
+  Eprint = {arXiv:1803.07640},
 }
 
-@article{hadash2018estimate,
-  title={Estimate and Replace: A Novel Approach to Integrating Deep Neural Networks with Existing Applications},
-  author={Hadash, Guy and Kermany, Einat and Carmeli, Boaz and Lavi, Ofer and Kour, George and Jacovi, Alon},
-  journal={arXiv preprint arXiv:1804.09028},
-  year={2018}
+
+@Misc{pracmln,
+    author =    {Daniel Nyga and Mareike Picklum and Michael Beetz and others},
+    title =     {{pracmln} -- Markov logic networks in {Python}},
+    year =      {2013--},
+    url = "http://www.pracmln.org/",
+    note = {[Online]}
 }
+
+@book{grinberg2018flask,
+  title={Flask web development: developing web applications with python},
+  author={Grinberg, Miguel},
+  year={2018},
+  publisher={" O'Reilly Media, Inc."}
+}
+
+  @misc{ enwiki:1020063620,
+    author = "{Wikipedia contributors}",
+    title = "Natural language processing --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2021",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Natural_language_processing&oldid=1020063620}",
+    note = "[Online; accessed 4-May-2021]"
+  }
