--- a/Report/article_4.tex
+++ b/Report/article_4.tex
@@ -97,6 +97,9 @@ This project is a demo of social network comment section with a special algorith
 %----------------------------------------------------------------------------------------
 %	INTRODUCTION
 %----------------------------------------------------------------------------------------
+\section{Introduction}
+
+
 
 \section{Knowledges used in the Project}
 \subsection{Natural Language Processing}
