--- a/Report/article_4.tex
+++ b/Report/article_4.tex
@@ -120,6 +120,12 @@ the two binary values \textbf{\{True, False\}}.
 
 The world above is an assignment of values of $V$.
 
+We are continuously thinking about the way to infer the truth of the event. PageRank algorithm by Jimmy Page gave us the
+confidence to utilize graph theory to solve the truth of an event. We tried Pagerank Algorithm to infer the truth of an
+event by assigning the relationship \textbf{\{Entailment, Contradiction, Independence\}} between any pairs of comments on
+the social network. Then we construct a directed graph of this set of comments. Each comment will post its importance to
+the comment that it entails, and we construct
+
 
 
 \section{Knowledges used in the Project}
