--- a/Report/article_4.tex
+++ b/Report/article_4.tex
@@ -164,9 +164,11 @@ The NLP package used in this project is \textbf{AllenNLP} \cite{Gardner2017Allen
 \subsection{Flask}
 \textbf{Flask} is a micro web framework written in Python 
 \cite{grinberg2018flask}. We use \textbf{Flask} to show the demo of social network comments section. Here is a figure of the demo website:
-\begin{equation}
-    figure
-\end{equation}
+\begin{figure}[tb]
+    \centering 
+    \includegraphics[width=\columnwidth]{Flask.png} 
+    \caption[An Screenshot of the website]{An Screenshot of the website} % The text in the square bracket is the caption for the list of figures while the text in the curly brackets is the figure caption
+    \end{figure}
 From the website, we can find that:
 
 \section{Introduction}
