--- a/Report/article_4.tex
+++ b/Report/article_4.tex
@@ -124,7 +124,7 @@ We are continuously thinking about the way to infer the truth of the event. Page
 confidence to utilize graph theory to solve the truth of an event. We tried Pagerank Algorithm to infer the truth of an
 event by assigning the relationship \textbf{\{Entailment, Contradiction, Independence\}} between any pairs of comments on
 the social network. Then we construct a directed graph of this set of comments. Each comment will post its importance to
-the comment that it entails, and we can construct a transition matrix, and then calculate $A^500$ or above, until the matrix
+the comment that it entails, and we can construct a transition matrix, and then calculate $A^{500}$ or above, until the matrix
 converges. Then we can find the stationary point. Then we can rank the comments according to their PageRank value. In this process,
 we observe the specfic property of graph. However, this algorithm may not work very well in practice, because its time complexity is $O(n!)$. 
 Now we focus on the combination of graph and First Oerder Logic. 
@@ -195,18 +195,45 @@ The NLP package used in this project is \textbf{AllenNLP} \cite{Gardner2017Allen
 \textbf{Pracmln} is a toolbox for statistical relational learning and reasoning and as such also includes tools for standard graphical models \cite{pracmln}. We use this package to build the markov logic networks and give the results.
 \subsection{Flask}
 \textbf{Flask} is a micro web framework written in Python 
-\cite{grinberg2018flask}. We use \textbf{Flask} to show the demo of social network comments section. Here is a figure of the demo website:
+\cite{grinberg2018flask}. We use \textbf{Flask} to show the demo of social network comments section. From the \textbf{figure 1}:
 \begin{figure}[htb]
     \centering 
     \includegraphics[width=\columnwidth]{Flask.png} 
     \caption[An Screenshot of the website]{An Screenshot of the website} % The text in the square bracket is the caption for the list of figures while the text in the curly brackets is the figure caption
     \end{figure}
 
+we can find that we can input and post comments in a text area. We even can choose the type of the comments. However, if we choose the wrong type, the NLP model will indentify it and change the type into the correct one. All of the comments will be showed below the text area. Also, the names and functions in the comments will be showed in the left sides. The result of the Markov Logic Networks will be showed below them.
 
-On the website, we can find that we can input and post comments in a text area. We even can choose the type of the comments. However, if we choose the wrong type, the NLP model will indentify it and change the type into the correct one. All of the comments will be showed below the text area. Also, the names and functions in the comments will be showed in the left sides. The result of the Markov Logic Networks will be showed below them.
+\clearpage
 
 \section{Example}
-Here we show a example with full steps of the usage of the demo. 
+Here we show a example with full steps of the usage of the demo.
+
+We first input some facts:
+$$
+facts.jpg
+$$
+
+Then we input some predicates and logic:
+$$
+predicates and logic.jpg
+$$
+
+Also we can input some emotionals (Whichever the type we choose they will be shown as the emotionals finally):
+$$
+emotionals.jpg
+$$
+
+Now, we can find that all of the names and functions appeared in the comments are clearly showed in the left side:
+
+$$
+appear.jpg
+$$
+
+We click the button of running the markov logic networks and find that the result is showed below in the form of probabilities:
+$$
+result.jpg
+$$
 
 \section{Conclusion and further development}
 
